[gd_scene load_steps=16 format=2]

[ext_resource path="res://FlappyBirdAssets/img/bg.jpg" type="Texture" id=1]
[ext_resource path="res://FlappyBirdAssets/img/back.png" type="Texture" id=2]
[ext_resource path="res://FlappyBirdAssets/img/bird.png" type="Texture" id=3]
[ext_resource path="res://scripts/Bird.gd" type="Script" id=4]
[ext_resource path="res://scripts/Floor.gd" type="Script" id=5]
[ext_resource path="res://Objects/Pipe.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/PipeManager.gd" type="Script" id=7]
[ext_resource path="res://Objects/UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Game.gd" type="Script" id=9]
[ext_resource path="res://scripts/CameraShaker.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=6]
radius = 50.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fly"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 600, 50 )

[node name="Game" type="Node"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 375, 737 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Bird" type="RigidBody2D" parent="."]
position = Vector2( 375, 600 )
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bird"]
autoplay = "fly"
anims/RESET = SubResource( 2 )
anims/die = SubResource( 3 )
anims/fly = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Bird"]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 3

[node name="Pipe" parent="." instance=ExtResource( 6 )]

[node name="PipeManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 600, 730 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
script = ExtResource( 5 )

[node name="wall" type="Node2D" parent="."]

[node name="StaticBody2D_ceil" type="StaticBody2D" parent="wall"]
position = Vector2( 390, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/StaticBody2D_ceil"]
position = Vector2( 0, 16 )
shape = SubResource( 5 )

[node name="StaticBody2D_floor" type="StaticBody2D" parent="wall"]
position = Vector2( 390, 1144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/StaticBody2D_floor"]
shape = SubResource( 5 )

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="CameraShaker" type="Tween" parent="Camera2D"]
script = ExtResource( 10 )

[connection signal="body_entered" from="Bird" to="Bird" method="_on_Bird_body_entered"]
[connection signal="body_exited" from="Bird" to="Bird" method="_on_Bird_body_exited"]
